[package]
name = "genesis-tools"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive", "env", "suggestions"] }
anyhow = { workspace = true }
# ol-genesis-tools = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
ol-types = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
diem-types = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
move-core-types = { workspace = true }
aptos-types = { workspace = true }
bcs = { workspace = true }
aptos-gas = { workspace = true }
aptos-vm = { workspace = true }
aptos-framework = { workspace = true }
aptos-crypto = { workspace = true }
aptos-cached-packages = { workspace = true }
aptos-secure-storage = { workspace = true }
aptos-genesis = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

## TODO remove vendorized for upstream monorepo vendorized.
vendorized-aptos-github-client = { workspace = true }
vendorized-vm-genesis = { workspace = true }


# for the hack_ files
dialoguer = "0.8.0"
console = "0.15.5"
indicatif = "0.17.3"


[dev-dependencies]
aptos-sdk = { workspace = true }

