[package]
name = "genesis-tools"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive", "env", "suggestions"] }
anyhow = { workspace = true }
# ol-genesis-tools = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
ol-types = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
diem-types = { git = "https://github.com/simsekgokhan/libra.git", branch = "v6-dwh-err"}
move-core-types = { workspace = true }
libra-types = { workspace = true }
bcs = { workspace = true }
libra-gas = { workspace = true }
libra-vm = { workspace = true }
libra-framework = { workspace = true }
libra-crypto = { workspace = true }
libra-cached-packages = { workspace = true }
libra-secure-storage = { workspace = true }
libra-genesis = { workspace = true }
libra-github-client = { workspace = true }
libra-vm-genesis = { workspace = true }
# libra-sdk = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }



# for the hack_ files
dialoguer = "0.8.0"
console = "0.15.5"
indicatif = "0.17.3"


[dev-dependencies]
libra-sdk = { workspace = true }

